--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon src/index.js" 
+    "dev": "nodemon src/index.js"
   },
   "keywords": [
     "javascript",
@@ -14,7 +14,8 @@
   ],
   "author": "Prabin Kumar Khamania",
   "license": "ISC",
-  "dependencies": {
-    "express": "^3.0.1"
+  "devDependencies": {
+    "nodemon": "^3.0.1",
+    "prettier": "^3.5.2"
   }
 }
