--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,3 @@
 PORT=8000
-MONGODB_URI=mongodb+srv://prabinkumarkhamania7:<Prabin1621>@cluster0.w42rv.mongodb.net
+MONGODB_URI=mongodb+srv://prabinkumarkhamania7:Prabin1621@cluster0.w42rv.mongodb.net
+CORS_ORIGIN=*
