--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "prettier": "^3.5.2"
   },
   "dependencies": {
+    "cookie-parse": "^0.4.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mongoose": "^8.10.1"
