--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
     "prettier": "^3.5.2"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cookie-parse": "^0.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "mongoose": "^8.10.1"
+    "json-web-token": "^3.2.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.10.1",
+    "mongoose-aggregate-paginate-v2": "^1.1.4"
   }
 }
