--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "backend2",
   "version": "1.0.0",
-  "description": "a backend at chai aur code channel",
+  "description": "a backend at chai aur code channel - youtube ",
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js"
+    "dev": "nodemon src/index.js"
   },
   "keywords": [
     "javascript",
@@ -15,18 +15,6 @@
   "author": "Prabin Kumar Khamania",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^3.0.1",
-    "prettier": "^3.5.2"
-  },
-  "dependencies": {
-    "bcrypt": "^5.1.1",
-    "cookie-parse": "^0.4.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "json-web-token": "^3.2.0",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.10.1",
-    "mongoose-aggregate-paginate-v2": "^1.1.4"
+    "nodemon": "^3.1.9"
   }
 }
